[package]
name = "swatch-rs"
version = "0.1.0"
authors = ["Urvil Patel <patelurvil38@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"

[profile.dev]
opt-level = 3
